fix alignment of headings in notes sections

--- a/client/src/dashboard/styles/dashboard/_dashboard.scss
+++ b/client/src/dashboard/styles/dashboard/_dashboard.scss
@@ -342,4 +342,8 @@
     height: auto !important; //can be removed when new design implemented
     min-height: auto !important; //can be removed when new design implemented
   }
+
+  h4 {
+    margin-top: 0;
+  }
 }
